// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with browser requests GET http://127.0.0.1:7373/echo 1`] = `
"GET /echo HTTP/1.1
Host: 127.0.0.1:7373
User-Agent: RESTer
Accept: text/plain
Accept-Language: en
Accept-Encoding: gzip, deflate
Connection: keep-alive
Pragma: no-cache
Cache-Control: no-cache"
`;

exports[`with browser requests GET http://127.0.0.1:7373/echo with cookie 1`] = `
"GET /echo HTTP/1.1
Host: 127.0.0.1:7373
User-Agent: RESTer
Accept: */*
Accept-Language: en
Accept-Encoding: gzip, deflate
Connection: keep-alive
Cookie: number1=10; number2=200; number3=300
Pragma: no-cache
Cache-Control: no-cache"
`;

exports[`with browser requests POST http://127.0.0.1:7373/redirect?how=307 1`] = `
"POST /echo HTTP/1.1
Host: 127.0.0.1:7373
User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:65.0) Gecko/20100101 Firefox/65.0
Accept: */*
Accept-Language: en
Accept-Encoding: gzip, deflate
Content-Type: text/plain;charset=UTF-8
Content-Length: 0
Origin: moz-extension://595108c3-fc1a-46bc-a6f6-918a6b1898aa
Connection: keep-alive
Pragma: no-cache
Cache-Control: no-cache

"
`;

exports[`with clean requests GET http://127.0.0.1:7373/echo 1`] = `
"GET /echo HTTP/1.1
Host: 127.0.0.1:7373
User-Agent: RESTer
Accept: text/plain
Pragma: no-cache
Cache-Control: no-cache"
`;

exports[`with clean requests GET http://127.0.0.1:7373/echo with cookie 1`] = `
"GET /echo HTTP/1.1
Host: 127.0.0.1:7373
User-Agent: RESTer
Cookie: number2=200;number3=300
Pragma: no-cache
Cache-Control: no-cache"
`;

exports[`with clean requests POST http://127.0.0.1:7373/redirect?how=307 1`] = `""`;
